--- a/views/new_player.erb
+++ b/views/new_player.erb
@@ -2,5 +2,5 @@
 	<label for="name">What's your name?</label>
 	<input type="text" name="name" value="" />
 	<br /><br />
-	<input type="submit" />
+	<input type="submit" class="btn-primary" />
 </form>
