--- a/views/new_player.erb
+++ b/views/new_player.erb
@@ -1,3 +1,4 @@
+<h2>Enter your name to start.</h2>
 <form action="/new_player" method="post">
 	<label for="name">What's your name?</label>
 	<input type="text" name="name" value="" />
